[GURPS] v1.7.2 Mostly Cosmetic changes: GURPS.html, GURPS.css, README.md
Changes, Fixes, and Adds made by Mike W (UserID: 1414610)
Updated, reformatted, and added many ToolTips – Cosmetic Only
Fixed a very minor error in the CSS file – Cosmetic Only
Fixed  basic Swing damage calculator bug – reported and fixed by Vitalii S (User ID: 146689
Fixed alignment of the Melee Attacks Header – Cosmetic Only
Changed Options box name of Critical Successes to Successes / Fails – Cosmetic Only
Cleaned up Change Log and removed all entries prior to 08/06/2019), added some new info on the options page - Cosmetic Only
Fixed alignment of the Inventory Header – Cosmetic Only
Added Grand Total Weight to the Inventory page and reformatted the results – Cosmetic Only

--- a/GURPS/gurps.css
+++ b/GURPS/gurps.css
@@ -344,7 +344,7 @@ input {
 }
 
 .sheet-speed-range-table img {
-     width: 140 px;
+     width: 140px;
 }
 
 .sheet-rapid-fire-table {
@@ -830,9 +830,11 @@ input.sheet-module-roll:checked ~ .sheet-wrapper .sheet-module-off-roll,
 .sheet-box .sheet-row-details2 .sheet-col3 { width: 250px; }
 .sheet-box .sheet-row-details2 .sheet-col3 input { text-align: left; }
 
-/* -- TOOLTIPS -- */
-.sheet-row-thrust-damage .sheet-col0 .sheet-tooltip { margin: -250px; }
-.sheet-row-swing-damage .sheet-col0 .sheet-tooltip { margin: -250px; }
+
+/* -- TOOLTIPS - Specific -- */
+.sheet-attribute .sheet-row-thrust-damage .sheet-tooltip { margin-left: 80px; margin-top: -200px }
+.sheet-attribute .sheet-row-swing-damage .sheet-tooltip { margin-left: 80px; margin-top: -200px}
+.sheet-encumberance .sheet-colAll .sheet-tooltip { margin-left: -215px; }
 .sheet-lift .sheet-tooltip { margin-left: -170px; }
 .sheet-miscelleneous .sheet-tooltip { margin-left: -75px; }
 .sheet-active-defense .sheet-tooltip { margin-left: -120px; }
@@ -845,6 +847,7 @@ input.sheet-module-roll:checked ~ .sheet-wrapper .sheet-module-off-roll,
 .sheet-ranged-attacks .sheet-tooltip { margin-left: -100px; }
 .sheet-ranged-attacks .sheet-col1 .sheet-tooltip { margin-left: -40px; }
 .sheet-encumberance .sheet-tooltip { margin-left: -40px; }
+.sheet-row-totals .sheet-tooltip { margin-left: 10px; }
 .sheet-points .sheet-tooltip { margin-left: -310px; }
 .sheet-spells .sheet-col11 .sheet-tooltip { margin-left: -150px; }
 .sheet-spells .sheet-col12 .sheet-tooltip { margin-left: -200px; }
@@ -882,17 +885,12 @@ input.sheet-module-roll:checked ~ .sheet-wrapper .sheet-module-off-roll,
 .sheet-main-attribute .sheet-row .sheet-col0 { font-size: 20px; }
 .sheet-main-attribute .sheet-row .sheet-col1 input { font-size: 20px; }
 
-.sheet-main-attribute .sheet-tooltip { font-size: 11px; }
 .sheet-attribute .sheet-row-perception { height: 25px; }
 .sheet-attribute .sheet-row-perception .sheet-col0 { font-size: 16px; }
 .sheet-attribute .sheet-row-perception .sheet-col1 input { font-size: 16px; }
-.sheet-attribute .sheet-row-perception .sheet-tooltip { font-size: 11px; }
 .sheet-attribute .sheet-row-willpower { height: 25px; }
 .sheet-attribute .sheet-row-willpower .sheet-col0 { font-size: 16px; }
 .sheet-attribute .sheet-row-willpower .sheet-col1 input { font-size: 16px; }
-.sheet-attribute .sheet-row-willpower .sheet-tooltip { font-size: 11px; }
-.sheet-attribute .sheet-row-thrust-damage .sheet-tooltip { font-size: 11px; margin-left: 10px;}
-.sheet-attribute .sheet-row-swing-damage .sheet-tooltip { font-size: 11px; margin-left: 10px;}
 .sheet-attribute .sheet-row-condition-stun { height: 25px; }
 .sheet-attribute .sheet-row-condition-stun .sheet-col0,
 .sheet-attribute .sheet-row-condition-stun .sheet-col0 input { 
@@ -1545,7 +1543,7 @@ input[type="checkbox"][name="attr_toggle_turn_deceleration"]:not(:checked) ~ div
 
 /* -- Melee Attacks -- */
 .sheet-melee-attacks { width: calc(100% - 140px - 0.8em); }
-.sheet-melee-attacks .sheet-col0 { width: calc(100% - 257px); }
+.sheet-melee-attacks .sheet-col0 { width: calc(100% - 253px); }
 .sheet-melee-attacks .sheet-col0 input { text-align:left; }
 .sheet-melee-attacks .sheet-col1 { width: 60px; }
 .sheet-melee-attacks .sheet-col2 { width: 30px; }
@@ -1807,10 +1805,9 @@ input[type="checkbox"][name="attr_toggle_turn_deceleration"]:not(:checked) ~ div
 .sheet-damage-reduction .sheet-row-title .sheet-col0 { width: 100%; }
 .sheet-damage-reduction .sheet-header .sheet-col2 { width: 65px; }
 
-/* -- POSSESSIONS -- */
+/* -- INVENTORY -- */
 .sheet-quick-inventory { width: calc(100% - 0.4em); }
 .sheet-items .sheet-col0 { width: calc(100% - 0.4em); }
-
 .sheet-items { width: calc(100% - 0.4em); }
 .sheet-items .sheet-col0 { width: calc(100% - 400px); }
 .sheet-items .sheet-col0 input { text-align:left; }
@@ -1821,15 +1818,18 @@ input[type="checkbox"][name="attr_toggle_turn_deceleration"]:not(:checked) ~ div
 .sheet-items .sheet-col4 { width: 50px; }
 .sheet-items .sheet-col5 { width: 60px; }
 .sheet-items .sheet-col5 input { text-align:right; }
-.sheet-items .sheet-col6 { width: 50px; }
+.sheet-items .sheet-col6 { width: 55px; }
 .sheet-items .sheet-col6 input { text-align:right; }
 .sheet-items .sheet-col7 { width: 60px; }
 .sheet-items .sheet-col8 { width: 50px; }
 .sheet-items .sheet-row-stats .sheet-col0 { margin-left: 48px; width: calc(100% - 449px); }
-.sheet-items .sheet-row-totals .sheet-col0 { width: calc(100% - 380px); }
-.sheet-items .sheet-row-totals .sheet-col1 { width: 100px; }
-.sheet-items .sheet-row-totals .sheet-col2 { width: 100px; }
-.sheet-items .sheet-row-totals .sheet-col3 { width: 100px; }
+.sheet-items .sheet-row-totals .sheet-col0 { width: calc(100% - 645px); }
+.sheet-items .sheet-row-totals .sheet-col1 { width: 140px; }
+.sheet-items .sheet-row-totals .sheet-col2 { width: 75px; }
+.sheet-items .sheet-row-totals .sheet-col3 { width: 150px; }
+.sheet-items .sheet-row-totals .sheet-col4 { width: 75px; }
+.sheet-items .sheet-row-totals .sheet-col5 { width: 130px; }
+.sheet-items .sheet-row-totals .sheet-col6 { width: 75px; }
 
 /* -- highlight row -- */
 .sheet-items .repcontainer.ui-sortable.editmode .sheet-toggle-highlight {
