Forbidden Lands v1.57 update
- "Dice Only" tab has been removed.
- Monster skills that are "strength-based" now have their own attributes on the monster tab's listed skills. (crafting_monster, endurance_monster melee_monster, and might_monster) This will allow the GM to enter a value 0-12 of base dice that will be used to update the dice pool when selected.
- Added additional damage tracking (toggleable feature) for Monster's up to Strength 48. Here be Dragons...
- Max values for primary attributes are equal to the primary attribute value(auto-calculated). ie strength_tolal_max = strength. This can be useful for tracking the current attribute value using a token bar/bubble. Example; linking strength_total will use the max value of strength_total|max.

--- a/Forbidden_Lands/Forbidden_Lands.css
+++ b/Forbidden_Lands/Forbidden_Lands.css
@@ -36,7 +36,8 @@ input.sheet-announcements-show {
   margin: 0.5em -3em 0 0;
 }
 
-input[type="checkbox"].sheet-announcements-older-show {
+input[type="checkbox"].sheet-announcements-older-show,
+input.sheet-monster_only:checked~div.sheet-character input[type="checkbox"].sheet-extra-damage-show {
   position: relative;
   z-index: 1;
   float: right;
@@ -46,15 +47,33 @@ input[type="checkbox"].sheet-announcements-older-show {
   opacity: 0;
 }
 
+input.sheet-monster_only:checked~div.sheet-character input[type="checkbox"].sheet-extra-damage-show:not(:checked) {
+  margin: -21px 0 0 0;
+  width: 1.65em;
+  height: 1.65em;
+}
+
+input.sheet-monster_only:checked~div.sheet-character input[type="checkbox"].sheet-extra-damage-show:checked {
+  margin: -36px 0 0 0;
+  width: 1.65em;
+  height: 1.65em;
+}
+
+input.sheet-monster_only:checked~div.sheet-character input[type="checkbox"].sheet-extra-damage-show+span {
+  margin: -25px 0 0 -21px;
+}
+
 input.sheet-announcements-show:hover+span {
   color: #a60100;
 }
 
-input.sheet-announcements-older-show:hover+span {
+input.sheet-announcements-older-show:hover+span,
+input.sheet-monster_only:checked~div.sheet-character input[type="checkbox"].sheet-extra-damage-show:hover+span {
   border-left-color: #a60100;
 }
 
-input.sheet-announcements-older-show+span {
+input.sheet-announcements-older-show+span,
+input.sheet-monster_only:checked~div.sheet-character input[type="checkbox"].sheet-extra-damage-show+span {
   position: relative;
   float: right;
   width: 0;
@@ -72,12 +91,23 @@ input.sheet-announcements-older-show+span {
   border-left-color: #c0a748;
 }
 
-input.sheet-announcements-older-show:checked+span {
+input.sheet-monster_only:checked~div.sheet-character input[type="checkbox"].sheet-extra-damage-show:not(:checked)+span {
+  margin: -1.5em -.25em 0 -1.5em;
+}
+
+input.sheet-monster_only:checked~div.sheet-character input[type="checkbox"].sheet-extra-damage-show:checked+span {
+  margin: -1.5em .1em 0 -1.5em;
+}
+
+input.sheet-announcements-older-show:checked+span,
+input.sheet-monster_only:checked~div.sheet-character input[type="checkbox"].sheet-extra-damage-show:checked+span {
   transform: rotate(90deg);
 }
 
 .sheet-announcements-show:not(:checked)+span+div.sheet-announcements,
-.sheet-announcements-older-show:not(:checked)~.sheet-announcements-older-show {
+.sheet-announcements-older-show:not(:checked)~.sheet-announcements-older-show,
+input.sheet-monster_only:checked~div.sheet-character .sheet-extra-damage-show:not(:checked) ~ .sheet-extra-damage-show,
+input.sheet-monster_only:checked~div.sheet-character .sheet-extra-damage-show:not(:checked) ~ .sheet-extra-damage-show+span::before {
   display: none;
 }
 
@@ -89,6 +119,11 @@ input.sheet-announcements-older-show:checked+span {
   color: #333;
   border: 1px solid #000;
   border-radius: 5px;
+}
+
+input.sheet-monster_only:checked~div.sheet-character .sheet-extra-damage-show:checked+span ~ .sheet-extra-damage-show,
+input.sheet-monster_only:checked~div.sheet-character .sheet-extra-damage-show:checked+span ~ .sheet-extra-damage-show+span::before {
+  display: block;
 }
 
 .sheet-announcements {
@@ -206,7 +241,7 @@ input.sheet-skull[type="radio"] {
   position: relative;
   z-index: 1;
   top: 1px;
-  left: 9px;
+  left: 4.75%;
   width: 15px;
   height: 15px;
   margin: -10px;
@@ -331,18 +366,7 @@ button.sheet-roll-button {
   justify-self: center;
 }
 
-/* Update the Dice Pool indicator  
-.sheet-roll-indicator ~ button[name="roll_the_dice"] {
-  box-shadow: 0;
-}
-
-.sheet-roll-indicator:checked ~ button[name="roll_the_dice"] {
-  box-shadow: 4px 4px 7px #a60100;
-  transition: box-shadow 4s;
-}
-*/
 /* Update the Dice Pool indicator  */
-
 .sheet-box-indicator button,
 .sheet-box-api-indicator button {
   z-index: 1;
@@ -454,7 +478,6 @@ input.sheet-hidden.sheet-api-toggle-show:checked~div.sheet-grid-item.sheet-api-r
 }
 
 /* Sheet Tabs */
-
 div.sheet-tab-content {
   display: none;
   margin-top: -30px;
@@ -463,14 +486,9 @@ div.sheet-tab-content {
 
 input.sheet-character:checked~div.sheet-character,
 input.sheet-stronghold:checked~div.sheet-stronghold,
-input.sheet-monster_only:checked~div.sheet-character,
-input.sheet-dice_only:checked~div.sheet-character {
+input.sheet-monster_only:checked~div.sheet-character {
   display: inline-block;
   margin-top: -30px;
-}
-
-input.sheet-dice_only:checked~div.sheet-character .sheet-toggle-dice-only {
-  display: none;
 }
 
 input.sheet-monster_only:checked~div.sheet-character .sheet-toggle-monster-only {
@@ -522,22 +540,19 @@ input.sheet-tab::before {
 
 input.sheet-tab.sheet-character:checked,
 input.sheet-tab.sheet-stronghold:checked,
-input.sheet-tab.sheet-monster:checked,
-input.sheet-tab.sheet-dice_only:checked {
+input.sheet-tab.sheet-monster:checked {
   z-index: 2;
 }
 
 input.sheet-tab.sheet-character:hover,
 input.sheet-tab.sheet-stronghold:hover,
-input.sheet-tab.sheet-monster:hover,
-input.sheet-tab.sheet-dice_only:hover {
+input.sheet-tab.sheet-monster:hover {
   z-index: 3;
 }
 
 input.sheet-tab.sheet-character:hover::before,
 input.sheet-tab.sheet-stronghold:hover::before,
-input.sheet-tab.sheet-monster:hover::before,
-input.sheet-tab.sheet-dice_only:hover::before {
+input.sheet-tab.sheet-monster:hover::before {
   z-index: 3;
   width: 92px;
   height: 22px;
@@ -1031,6 +1046,7 @@ input.sheet-monster_only:checked~div.sheet-character .sheet-character-dice_pool 
   grid-column-start: 3;
   grid-row: span 2;
   grid-row-start: 1;
+  height: fit-content;
 }
 
 input.sheet-monster_only:checked~div.sheet-character .sheet-character-notes {
@@ -1709,6 +1725,7 @@ input.sheet-conditions-cold:checked~div>span.sheet-conditions-cold {
 
 .sheet-dice-preset-preset {
   grid-area: sheet-dice-preset-preset;
+  text-align: center;
 }
 
 .sheet-dice-preset-preset::before,
