[Ryuutama]: Add spell rolltemplate (#5728)
* [Ryuutama] adding spell template

* [Ryuutama]: spacing fixes

* [Ryuutama]: tiny css format fix

* [Ryuutama]: fix caps

--- a/Ryuutama/Ryuutama.css
+++ b/Ryuutama/Ryuutama.css
@@ -1,6 +1,6 @@
 @font-face {
-font-family: Charm;
-src: url(url(https://fonts.gstatic.com/s/charm/v4/7cHmv4oii5K0MdYoK-4.woff2), url(https://fonts.gstatic.com/s/tinos/v13/buE4poGnedXvwjX7fmQ.woff2), ;
+    font-family: Charm;
+    src: url(url(https://fonts.gstatic.com/s/charm/v4/7cHmv4oii5K0MdYoK-4.woff2), url(https://fonts.gstatic.com/s/tinos/v13/buE4poGnedXvwjX7fmQ.woff2) ;
 }
 
 * {
@@ -105,9 +105,8 @@ hr {
 }
 
 .sheet-spellEffect {
-    margin-top: 5px;
-    width:47%;
-    height: 60px;
+    margin: 0 5px;
+    height: 75px;
 }
 
 .sheet-spellTypes {
@@ -510,13 +509,49 @@ input.sheet-tab5:checked ~ span.sheet-characterEquipment {
     margin-left: 5px;
 }
 
+.sheet-rolltemplate-spellContainer {
+    border: 1px solid gray;
+}
+
+.sheet-rolltemplate-spellCard {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-between;
+    background-color: #d0d2e4;
+}
+
+.sheet-rolltemplate-spellTitle,
+.sheet-rolltemplate-spellAttrText{
+    background-color: #45619e;
+    font-family: Helvetica, Arial;
+    font-weight: bold;
+    font-size: 12px;
+    justify-content: center;
+    color: white;
+    padding: 1px 3px;
+}
+
+.sheet-rolltemplate-spellAttr {
+    flex: 1;
+}
+
+.sheet-rolltemplate-spellAttrText,
+.sheet-rolltemplate-spellEffect {
+    background-color: #d0d2e4;
+    color: black;
+    font-weight: normal;
+}
+
+.sheet-rolltemplate-spellEffect {
+    background-color: #fff;
+    padding: 3px;
+}
+
 /* Styling that removes the box around roll buttons
     ============================= */
 button[type=roll].sheet-skill-check-button::before { content: ''; }
 
-button[type=roll].sheet-skill-check-button:hover {
-color: #229999;
-}
+button[type=roll].sheet-skill-check-button:hover { color: #229999; }
 
 button[type=roll].sheet-skill-check-button {
     background-color: transparent;
@@ -595,8 +630,8 @@ button[type=roll].sheet-skill-check-button {
 }
 
 .sheet-npc-sheet-container
-input::-webkit-outer-spin-button,
-input::-webkit-inner-spin-button {
+    input::-webkit-outer-spin-button,
+    input::-webkit-inner-spin-button {
     -webkit-appearance: none;
     margin: 0;
 }
