--- a/Ironsworn/Ironsworn.css
+++ b/Ironsworn/Ironsworn.css
@@ -461,7 +461,11 @@ input[type=radio].sheet-troll-names:checked ~ div.sheet-troll-names,
 input[type=radio].sheet-combat-action:checked ~ div.sheet-combat-action,
 input[type=radio].sheet-mystic-backlash:checked ~ div.sheet-mystic-backlash,
 input[type=radio].sheet-major-plot-twist:checked ~ div.sheet-major-plot-twist,
-input[type=radio].sheet-challenge-rank:checked ~ div.sheet-challenge-rank {
+input[type=radio].sheet-challenge-rank:checked ~ div.sheet-challenge-rank,
+input[type=radio].sheet-pay-the-price:checked ~ div.sheet-pay-the-price,
+input[type=radio].sheet-ask-the-oracle :checked ~ div.sheet-ask-the-oracle ,
+input[type=radio].sheet-endure-harm:checked ~ div.sheet-endure-harm,
+input[type=radio].sheet-endure-stress:checked ~ div.sheet-endure-stress {
     display: block;
 }
 
@@ -504,6 +508,10 @@ span.sheet-oracle-result {
     padding-right: 5px;
     text-transform: uppercase;
     width: 12.3em;
+}
+
+.sheet-oracle-table-preview {
+    width: auto;
 }
 
 /* .sheet-oracle::after {
