--- a/SavageWorlds-Tabbed/SWTRedesign.css
+++ b/SavageWorlds-Tabbed/SWTRedesign.css
@@ -4239,7 +4239,7 @@ textarea.sheet-event {
 input:not([value="1"]).sheet-showmultipleabs ~ [data-groupname=repeating_spells] > .repitem > .sheet-fullrow > .sheet-spellconfig > .sheet-showabindicatorselection > .sheet-powerconfiglabel > .sheet-container > .sheet-child3:hover label.sheet-ab2,
 input:not([value="1"]):not([value="2"]).sheet-showmultipleabs ~ [data-groupname=repeating_spells] > .repitem > .sheet-fullrow > .sheet-spellconfig > .sheet-showabindicatorselection > .sheet-powerconfiglabel > .sheet-container > .sheet-child3:hover label.sheet-ab3,
 input:not([value="1"]):not([value="2"]):not([value="3"]).sheet-showmultipleabs ~ [data-groupname=repeating_spells] > .repitem > .sheet-fullrow > .sheet-spellconfig > .sheet-showabindicatorselection > .sheet-powerconfiglabel > .sheet-container > .sheet-child3:hover label.sheet-ab4,
-input:not([value="1"]):not([value="2"]):not([value="3"]):not([value="4"]).sheet-showmultipleabs ~ [data-groupname=repeating_spells] > .repitem > .sheet-fullrow > .sheet-spellconfig > .sheet-showabindicatorselection > .sheet-powerconfiglabel > .sheet-container > .sheet-child3:hover label.sheet-ab5, {
+input:not([value="1"]):not([value="2"]):not([value="3"]):not([value="4"]).sheet-showmultipleabs ~ [data-groupname=repeating_spells] > .repitem > .sheet-fullrow > .sheet-spellconfig > .sheet-showabindicatorselection > .sheet-powerconfiglabel > .sheet-container > .sheet-child3:hover label.sheet-ab5 {
     display: inline-block;
     margin-left: -5px;
 }
