updated css colours to new accessible ones

--- a/Ironsworn/Ironsworn.css
+++ b/Ironsworn/Ironsworn.css
@@ -786,32 +786,32 @@ input.sheet-border-bottom {
 
 .sheet-rolltemplate-ironsworn .sheet-alert {
     color: white;
-    background-color: firebrick;
+    background-color: #761818;
 }
 
 .sheet-rolltemplate-ironsworn .sheet-opportunity {
     color: white;
-    background-color: #238023;
+    background-color: #0B3F0B;
 }
 
 .sheet-rolltemplate-ironsworn .sheet-strong-hit {
     color: white;
-    background-color: darkgreen;
+    background-color: #125812;
 }
 
 .sheet-rolltemplate-ironsworn .sheet-weak-hit {
-    color: black;
-    background-color: gold;
+    color: white;
+    background-color: #186251;
 }
 
 .sheet-rolltemplate-ironsworn .sheet-miss {
     color: white;
-    background-color: #970d0e;
+    background-color: #7D2B1D;
 }
 
 .sheet-rolltemplate-ironsworn .sheet-complication {
     color: white;
-    background-color: red;
+    background-color: #761818;
 }
 
 .sheet-rolltemplate-ironsworn .userscript-tcat {
