--- a/Pokerole 1e/Pokerole.css
+++ b/Pokerole 1e/Pokerole.css
@@ -1,4 +1,3 @@
-
 .charsheet{
     --background:#faf3d7;
     --background-highlight:;
@@ -16,8 +15,98 @@
     --smart:#b0c37c;
     
 }
+
+.sheet-tab-core,
+.sheet-tab-settings{
+    display:none;
+}
+
+.sheet-view[value='0'] ~ .sheet-tab-core,
+.sheet-view[value='1'] ~ .sheet-tab-settings{
+    display:block;
+}
+
+.sheet-rolltemplate-PMD .sheet-roll-container{
+  width:233px;  
+  color:black;
+}
+.sheet-rolltemplate-PMD .sheet-roll-container > .sheet-roll-row{
+    background: #cfccb8;
+    padding:2px 0;
+    border:1px solid black;
+    margin:2px 0;
+}
+.sheet-rolltemplate-PMD .sheet-roll-container > .sheet-roll-row:nth-child(1){
+    background: #ac4e34;
+}
+
+.sheet-rolltemplate-PMD .sheet-roll-row > span{
+    display:block;
+    text-align:center;
+}
+
+.sheet-rolltemplate-PMD  .sheet-roll-container .sheet-roll-name{
+    font-size:12pt;
+    font-weight:bold;
+    color:black;
+}
+.sheet-rolltemplate-PMD  .sheet-roll-container .sheet-roll-small{
+    font-size:8pt;
+    font-weight:bold;
+}
+.sheet-rolltemplate-PMD  .sheet-roll-container .sheet-roll-grey{
+    color:whitesmoke;
+}
+
+.sheet-rolltemplate-PMD  .sheet-roll-type{
+    font-size:8pt;
+    font-weight:bold;
+}
+
+.sheet-rolltemplate-PMD  .sheet-roll-value{
+    font-size:16pt;
+    font-weight:bold;
+}
+.sheet-rolltemplate-PMD  .sheet-roll-pool{
+    margin: 2px 0 0;
+}
+
+.sheet-rolltemplate-PMD .sheet-roll-value .inlinerollresult  {
+	display: inline-block;
+	min-width: 1.5em;
+	text-align: center;
+	padding: 5px 0px;
+	border: 2px solid rgba(167, 168, 170,1);
+}
+
+.sheet-rolltemplate-PMD .sheet-roll-value .inlinerollresult.fullcrit {
+	border: 2px solid #3FB315;
+}
+
+.sheet-rolltemplate-PMD .sheet-roll-value .inlinerollresult.fullfail {
+	border: 2px solid #B31515;
+}
+
+.sheet-rolltemplate-PMD .sheet-roll-value .inlinerollresult.importantroll {
+	border: 2px solid #4A57ED;
+}
+
+.sheet-rolltemplate-PMD .sheet-roll-description{
+    padding:7px;
+    text-align:left !important;
+    whitespace:pre-line;
+}
+
+
 .sheet-toggle-header{
+    position:relative;
+    display:block;
+    width:100%;
     margin-bottom:20px;
+}
+.sheet-toggle-header .sheet-view-toggle{
+    float:right;
+    margin-left:2px;
 }
 .sheet-toggle{
     display:inline-block;
