[Pokerole 1e] Added a roll template (#5742)
* Roll Template

Added a Roll Template to properly display roll information.
Added blank entries to generic roll drop down options.
Removed caps on Stat bonuses.
Fixed spelling error on 'survive'

* minor edits

Dead css removed.
Fixed missing roll template properties, these did not cause errors but resulted in missing information

--- a/Pokerole 1e/Pokerole.css
+++ b/Pokerole 1e/Pokerole.css
@@ -1,7 +1,5 @@
-
 .charsheet{
     --background:#faf3d7;
-    --background-highlight:;
     --section:#cfccb8; 
     --section-highlight:#a5a599;
     --foreground:#cd583c;
@@ -16,8 +14,98 @@
     --smart:#b0c37c;
     
 }
+
+.sheet-tab-core,
+.sheet-tab-settings{
+    display:none;
+}
+
+.sheet-view[value='0'] ~ .sheet-tab-core,
+.sheet-view[value='1'] ~ .sheet-tab-settings{
+    display:block;
+}
+
+.sheet-rolltemplate-PMD .sheet-roll-container{
+  width:233px;  
+  color:black;
+}
+.sheet-rolltemplate-PMD .sheet-roll-container > .sheet-roll-row{
+    background: #cfccb8;
+    padding:2px 0;
+    border:1px solid black;
+    margin:2px 0;
+}
+.sheet-rolltemplate-PMD .sheet-roll-container > .sheet-roll-row:nth-child(1){
+    background: #ac4e34;
+}
+
+.sheet-rolltemplate-PMD .sheet-roll-row > span{
+    display:block;
+    text-align:center;
+}
+
+.sheet-rolltemplate-PMD  .sheet-roll-container .sheet-roll-name{
+    font-size:12pt;
+    font-weight:bold;
+    color:black;
+}
+.sheet-rolltemplate-PMD  .sheet-roll-container .sheet-roll-small{
+    font-size:8pt;
+    font-weight:bold;
+}
+.sheet-rolltemplate-PMD  .sheet-roll-container .sheet-roll-grey{
+    color:whitesmoke;
+}
+
+.sheet-rolltemplate-PMD  .sheet-roll-type{
+    font-size:8pt;
+    font-weight:bold;
+}
+
+.sheet-rolltemplate-PMD  .sheet-roll-value{
+    font-size:16pt;
+    font-weight:bold;
+}
+.sheet-rolltemplate-PMD  .sheet-roll-pool{
+    margin: 2px 0 0;
+}
+
+.sheet-rolltemplate-PMD .sheet-roll-value .inlinerollresult  {
+	display: inline-block;
+	min-width: 1.5em;
+	text-align: center;
+	padding: 5px 0px;
+	border: 2px solid rgba(167, 168, 170,1);
+}
+
+.sheet-rolltemplate-PMD .sheet-roll-value .inlinerollresult.fullcrit {
+	border: 2px solid #3FB315;
+}
+
+.sheet-rolltemplate-PMD .sheet-roll-value .inlinerollresult.fullfail {
+	border: 2px solid #B31515;
+}
+
+.sheet-rolltemplate-PMD .sheet-roll-value .inlinerollresult.importantroll {
+	border: 2px solid #4A57ED;
+}
+
+.sheet-rolltemplate-PMD .sheet-roll-description{
+    padding:7px;
+    text-align:left !important;
+    white-space:pre-line;
+}
+
+
 .sheet-toggle-header{
+    position:relative;
+    display:block;
+    width:100%;
     margin-bottom:20px;
+}
+.sheet-toggle-header .sheet-view-toggle{
+    float:right;
+    margin-left:2px;
 }
 .sheet-toggle{
     display:inline-block;
@@ -46,8 +134,6 @@
     color:black;
 }
 
-.repcontrol_add{}
-.repcontrol_edit{}
 
 div.sheet-section{
     position:relative;
@@ -119,9 +205,7 @@ input, select, textarea{
     width:800px;
     margin:50px auto 0;
 }
-.sheet-section{
-    
-}
+
 .sheet-creature-toggle-wrapper{
     position:absolute;
     top: -20px;
@@ -422,9 +506,7 @@ input, select, textarea{
     margin-bottom:2px;
     border-radius:10px;
 }
-.sheet-conditions .sheet-conditions-row label{
-    
-}
+
 .sheet-conditions .sheet-condition-collapse{padding-left:5px;}
 .sheet-conditions .sheet-condition-collapse label{
     font-size: 9pt;
@@ -475,9 +557,7 @@ input, select, textarea{
 /***************************
     Skills
 ***************************/
-.sheet-skills{
-    
-}
+
 .sheet-skills .sheet-skills-main{
     display:block;
     width:max-content;
@@ -522,7 +602,7 @@ input, select, textarea{
 /***************************
     Inventory
 ***************************/
-.sheet-inventory{}
+
 .sheet-inventory label,
 .sheet-inventory strong{
     color:var(--background);
@@ -581,7 +661,7 @@ input, select, textarea{
 /***************************
     Move
 ***************************/
-.sheet-moves{}
+
 .sheet-moves .sheet-move-item{
     position:relative;
 }
