improved styling for oracles in chat

--- a/Ironsworn/Ironsworn.css
+++ b/Ironsworn/Ironsworn.css
@@ -903,7 +903,7 @@ input.sheet-border-bottom {
     font-style: italic;
     font-weight: bold;
     text-align: left;
-    padding: 0.5rem 0.5rem 0.2rem 0.5rem;
+    padding: 0.5rem;
 }
 
 .sheet-rolltemplate-ironsworn .sheet-subfooter,
@@ -957,6 +957,28 @@ input.sheet-border-bottom {
 .sheet-rolltemplate-ironswornoracles td {
 	padding: 5px;
 	/*border-bottom: 1px solid black;*/
+}
+
+.sheet-rolltemplate-ironswornoracles .sheet-oracle-dice {
+    width: 2em;
+    border-right: 1px solid;
+    background: #bfbfbf;
+}
+
+.sheet-rolltemplate-ironswornoracles .sheet-oracle-dice span {
+    border: 0px !important;
+}
+
+.sheet-rolltemplate-ironswornoracles .sheet-oracle-double-dice {
+    width: 5.7em;
+    border-right: 1px solid;
+    text-align: center;
+    background: #bfbfbf;
+    padding: 0.1em;
+}
+
+.sheet-rolltemplate-ironswornoracles .sheet-oracle-double-dice span {
+    border: 0px !important;
 }
 
 .sheet-rolltemplate-ironsworn tr:nth-child(odd),
