added new formatting for preview table

--- a/Ironsworn/Ironsworn.css
+++ b/Ironsworn/Ironsworn.css
@@ -448,7 +448,7 @@ input.sheet-filler[type="radio"]:checked ~ input.sheet-filler[type="radio"] + sp
 }
 
 .sheet-oracle {
-    margin: 0.2em;
+    margin: 0em;
     color: black;
     display: flex;
 }
@@ -571,11 +571,13 @@ span.sheet-oracle-result {
 .sheet-oracle-show {
     display: inline-flex;
     font-size: 1em;
-    margin: 0.3em;
+    margin: 0em;
+    padding: 0.3em;
 }
 
 .sheet-oracle-show:hover {
-    background: grey;
+    background: #969696;
+    cursor: pointer;
 }
 
 .sheet-oracle-table {
@@ -594,6 +596,24 @@ span.sheet-oracle-result {
 }
 .sheet-oracle-roll {
     width: 15%;
+}
+
+div.sheet-preview-roll {
+    padding: 0em;
+}
+
+span.sheet-preview-roll {
+    width: 30%;
+    margin-left: 1em;
+}
+
+.sheet-button-container {
+    width: 2.4em;
+    border-right: 1px solid black;
+}
+
+.sheet-button-container-preview {
+    width: 2.4em;
 }
 
 input[type="checkbox"].sheet-showhide:checked ~ div.sheet-showhide,
@@ -845,6 +865,18 @@ div.sheet-assets .repcontrol{
 
 input.sheet-border-bottom {
     border-bottom: 1px solid black;
+}
+
+.sheet-oracle-footer {
+    background-color: #434b4d;
+    color: #ffffff;
+    line-height: 0.9em;
+    font-size: 0.9em;
+    font-family: Verdana, arial, sans-serif;
+    font-variant: small-caps;
+    font-weight: bold;
+    text-align: left;
+    padding: 0.5rem;
 }
 
 /* ROLL TEMPLATE */
