(oracles) Twist Logic

--- a/Ironsworn/Ironsworn.css
+++ b/Ironsworn/Ironsworn.css
@@ -955,7 +955,8 @@ input.sheet-border-bottom {
     background-color: #761818;
 }
 
-.sheet-rolltemplate-ironsworn .sheet-opportunity {
+.sheet-rolltemplate-ironsworn .sheet-opportunity,
+.sheet-rolltemplate-ironswornoracles .sheet-opportunity {
     color: white;
     background-color: #0B3F0B;
 }
