added styling for long lists

--- a/Ironsworn/Ironsworn.css
+++ b/Ironsworn/Ironsworn.css
@@ -580,9 +580,41 @@ span.sheet-oracle-result {
     cursor: pointer;
 }
 
+.sheet-column-wrap {
+    flex-flow: column wrap;
+    width: 22.5em;
+}
+
 .sheet-oracle-table {
     border: 2px solid #414042;
     width: 45em;
+}
+
+.sheet-oracle-table-2-column-group {
+    display: flex;
+}
+
+
+.sheet-oracle-table-2-column {
+    flex-flow: column wrap;
+    height: 48em;
+    display: flex;
+}
+
+.sheet-oracle-table-3-column {
+    flex-flow: column wrap;
+    height: 63em;
+    display: flex;
+}
+
+.sheet-oracle-table-4-column {
+    flex-flow: column wrap;
+    height: 93em;
+    display: flex;
+}
+
+.sheet-oracle-result-4-column {
+    width: 22em;
 }
 
 .sheet-oracle-row:nth-child(2n+1), .sheet-oracle:nth-child(2n+1) {
@@ -594,8 +626,33 @@ span.sheet-oracle-result {
     display: flex;
     height: auto;
 }
+
+.sheet-oracle-row-2-column {
+    width: 21.7em;
+}
+
+.sheet-oracle-row-3-column {
+    width: 14.2em;
+}
+
+.sheet-oracle-row-4-column {
+    width: 10.47em;
+}
+
+.sheet-oracle-result-3-column {
+    width: 8em;
+}
+
 .sheet-oracle-roll {
     width: 15%;
+}
+
+.sheet-oracle-roll-2-column {
+    width: 45%;
+}
+
+.sheet-oracle-roll-4-column {
+    width: 109%;
 }
 
 div.sheet-preview-roll {
