added fix for missed  }}

--- a/Ironsworn/Ironsworn.css
+++ b/Ironsworn/Ironsworn.css
@@ -115,14 +115,16 @@ hr {
 .sheet-page1tab, 
 .sheet-page2tab,
 .sheet-page3tab,
-.sheet-page4tab {
+.sheet-page4tab,
+.sheet-page5tab {
     display: none;
 }
 
 input[type=radio].sheet-page1:checked ~ div.sheet-page1tab,
 input[type=radio].sheet-page2:checked ~ div.sheet-page2tab,
 input[type=radio].sheet-page3:checked ~ div.sheet-page3tab,
-input[type=radio].sheet-page4:checked ~ div.sheet-page4tab {
+input[type=radio].sheet-page4:checked ~ div.sheet-page4tab,
+input[type=radio].sheet-page5:checked ~ div.sheet-page5tab {
     display: block;
 }
 
@@ -491,6 +493,7 @@ div.sheet-showhide,
     display: none;
 }
 
+/* ORACLES */
 input[type=radio].sheet-action:checked ~ div.sheet-action,
 input[type=radio].sheet-theme:checked ~ div.sheet-theme,
 input[type=radio].sheet-region:checked ~ div.sheet-region,
@@ -563,10 +566,6 @@ span.sheet-oracle-result {
 .sheet-oracle-table-preview {
     width: auto;
 }
-
-/* .sheet-oracle::after {
-    content: " <>"
-} */
 
 .sheet-oracle-show {
     display: inline-flex;
@@ -673,6 +672,7 @@ span.sheet-preview-roll {
     width: 2.4em;
 }
 
+/* ASSETS */
 input[type="checkbox"].sheet-showhide:checked ~ div.sheet-showhide,
 input[type="checkbox"].sheet-asset-companion:checked ~ div.sheet-companion,
 input[type="checkbox"].sheet-asset-path:checked ~ div.sheet-path,
@@ -934,6 +934,15 @@ input.sheet-border-bottom {
     font-weight: bold;
     text-align: left;
     padding: 0.5rem;
+}
+
+/* BONDS */
+.sheet-bond-name {
+    border: none;
+}
+
+.sheet-bond-name::placeholder {
+    color: #8a8a8a;
 }
 
 /* ROLL TEMPLATE */
