--- a/Outbreak/OU2_Roll20_charsheet.css
+++ b/Outbreak/OU2_Roll20_charsheet.css
@@ -140,7 +140,7 @@ input.sheet-tab:checked + span::before {
     /*box-shadow: 3px 5px 2px #888888;*/
     float: left;
 }
-table input {
+input {
     text-align: center;
 }
 .sheet-spacer {
