sr5 importer fix

--- a/Shadowrun5thEdition/Shadowrun5thEdition.pug
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.pug
@@ -1,4 +1,4 @@
-input(name='attr_version' type='hidden' value='3.02')
+input(name='attr_version' type='hidden' value='3.03')
 
 //- CHARACTER SHETE PAGE
 input.sheet_type(name='attr_sheet_type' type='hidden' value='pc')
@@ -567,8 +567,11 @@ include src/rolltemplates.html
 include src/html/hidden.html
 
 //- SCRIPTS
-include src/js/scripts.js
+script(type="text/worker")
+
+	include src/js/scripts.js
+
+	include src/js/importer.js
 
 //- CHUMMER IMPORTER
 include src/html/importer.html
-include src/js/importer.js
